backgammon: fix crash on small terminals. From Aran Clauson.

(add a small tidyup from me as well)

Closes PR 58862.